# TheBusTelemetry

./: Cargo.toml  README.md
.github/workflows/: build.yml  buildandpublish.yml  test.yml
src/: api.rs  api2vehicle.rs  lib.rs  vehicle.rs  vehicle_diff.rs
tests/: api_test.rs  json_deserialization_test.rs
tests/json/: BP_Mercedes_eCitaro_12m_2Door_C.json  BP_Solaris_Urbino_18m_4D_C.json  Solaris_Urbino.txt  mb_ecitaro.json  world.json
