[package]
name = "the-bus-telemetry"
version = "2.0.0"
edition = "2024"
description = "Library for handling data exchange with the api (called telemetry) of the simulation software The Bus"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thatzok/TheBusTelemetry"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","blocking"] }

