[package]
name = "the-bus-telemetry"
version = "4.4.0"
edition = "2024"
rust-version = "1.93.1"
description = "Library for handling data exchange with the api (called telemetry) of the simulation software The Bus"
authors = ["ThatZok <af@komplix.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/thatzok/TheBusTelemetry"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","blocking"] }
komsi = "1.5.1"
